01_terraform_iac(+rds,docker)/02_vpc.tf
resource "aws_vpc" "ogurim_vpc" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "ogurim-vpc"
  }
}
