01_terraform_iac(+rds,docker)/13_albtg.tf
resource "aws_lb_target_group" "ogurim_albtg" {
  name     = "ogurim-albtg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.ogurim_vpc.id

  health_check {
    enabled           = true
    healthy_threshold = 2
    #default 3 (2~10)
    interval = 5
    #default 30 (5~300)
    matcher             = "200"
    path                = "/index.html"
    port                = "traffic-port"
    protocol            = "HTTP"
    timeout             = 3
    # default 5 (2~120)
    unhealthy_threshold = 3
    # default 3 (2~10)
  }

  tags = {
    Name = "ogurim-albtg"
  }

}
